--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,55 @@
-# Port na którym będzie dostępna aplikacja
-PORT=8080
+# ============================================
+# ClickUp Activity Monitor - Zmienne środowiskowe
+# ============================================
+# Skopiuj ten plik jako .env i uzupełnij wartości
+# cp .env.example .env
 
-# Secret do weryfikacji webhooków z ClickUp (opcjonalne ale zalecane)
-# Otrzymasz go przy tworzeniu webhooka przez API
+# ============================================
+# WYMAGANE - bez tych aplikacja nie ruszy
+# ============================================
+
+# JWT Secret - wygeneruj losowy string min 32 znaki
+# Możesz użyć: openssl rand -base64 32
+JWT_SECRET=
+
+# Dane logowania admina (pierwszy użytkownik)
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=
+
+# ClickUp API Token
+# Pobierz z: ClickUp → Settings → Apps → API Token
+CLICKUP_API_TOKEN=
+
+# URL frontendu - dla CORS i bezpieczeństwa
+# Produkcja: https://twoja-domena.pl
+# Lokalnie: http://localhost:8080
+FRONTEND_URL=https://twoja-domena.pl
+
+# URL API dla frontendu - gdzie frontend szuka backendu
+# Produkcja: https://twoja-domena.pl (nginx przekieruje /api na backend)
+# Lokalnie: http://localhost:3001
+VITE_API_URL=https://twoja-domena.pl
+
+# ============================================
+# OPCJONALNE - webhooks i integracje
+# ============================================
+
+# ClickUp Team ID - potrzebne do tworzenia webhooków
+# Pobierz przez API: curl -H "Authorization: TOKEN" https://api.clickup.com/api/v2/team
+CLICKUP_TEAM_ID=
+
+# ClickUp Webhook Secret - otrzymujesz przy tworzeniu webhooka
 CLICKUP_WEBHOOK_SECRET=
 
-# URL frontendu (dla CORS) - ustaw na domenę produkcyjną
-FRONTEND_URL=http://localhost:8080
+# Port na którym działa frontend (domyślnie 8080)
+PORT=8080
+
+# ============================================
+# NOTION (opcjonalne - przyszła integracja)
+# ============================================
+
+# Notion API Key - Internal Integration Token
+NOTION_API_KEY=
+
+# Notion API Version
+NOTION_VERSION=2022-06-28
