--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,19 @@ services:
       - NODE_ENV=production
       - PORT=3001
       - DB_PATH=/app/data/activity.db
+      # Auth (wymagane)
+      - JWT_SECRET=${JWT_SECRET}
+      - ADMIN_USERNAME=${ADMIN_USERNAME}
+      - ADMIN_PASSWORD=${ADMIN_PASSWORD}
+      # ClickUp (wymagane)
+      - CLICKUP_API_TOKEN=${CLICKUP_API_TOKEN}
       - CLICKUP_WEBHOOK_SECRET=${CLICKUP_WEBHOOK_SECRET:-}
-      - FRONTEND_URL=${FRONTEND_URL:-http://localhost}
+      - CLICKUP_TEAM_ID=${CLICKUP_TEAM_ID:-}
+      # CORS
+      - FRONTEND_URL=${FRONTEND_URL}
+      # Notion (opcjonalne)
+      - NOTION_API_KEY=${NOTION_API_KEY:-}
+      - NOTION_VERSION=${NOTION_VERSION:-2022-06-28}
     volumes:
       - activity-data:/app/data
     networks:
@@ -25,7 +36,7 @@ services:
     build:
       context: ./frontend
       args:
-        - VITE_API_URL=
+        - VITE_API_URL=${VITE_API_URL}
     container_name: clickup-monitor-frontend
     restart: unless-stopped
     ports:
