--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,9 @@ version: '3.8'
 services:
   backend:
     build: ./backend
-    container_name: clickup-monitor-backend
     restart: unless-stopped
+    expose:
+      - "3001"
     environment:
       - NODE_ENV=production
       - PORT=3001
@@ -37,10 +38,9 @@ services:
       context: ./frontend
       args:
         - VITE_API_URL=${VITE_API_URL}
-    container_name: clickup-monitor-frontend
     restart: unless-stopped
-    ports:
-      - "${PORT:-8080}:80"
+    expose:
+      - "80"
     depends_on:
       - backend
     networks:
