--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -21,6 +21,22 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
     }
 
+    # Proxy auth requests
+    location /auth {
+        proxy_pass http://backend:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Proxy admin requests
+    location /admin {
+        proxy_pass http://backend:3001;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     # Proxy webhook requests
     location /webhook {
         proxy_pass http://backend:3001;
